Use Stream toList for agent snapshots